2007-07-28  Kurt Maute  <kurt@maute.us>
	Two patches from Maurice van der Pot:
	* src/planner-task-tree.c - disable selection updates before manipulating
	tasks (works for single selection, but not multiple - bug 436263)
	* src/planner-gantt-row.c - fix resource name redraw in gantt chart when
	dragging relation arrow over it
	* MAINTAINERS - added Maurice
	* AUTHORS - added Maurice

2007-07-15  Kurt Maute  <kurt@maute.us>
	The following update provided by Maurice van der Pot <griffon26@kfk4ever.com>
	* src/planner-gantt-row.c  - allow dragging the completion bar in the
	gantt chart
	Clean up some of the indenting in the .xsl files:
	* data/dtd/mrproject-0.6.dtd
	* data/stylesheets/html1_tasks.xsl
	* data/stylesheets/html1_css.xsl
	* data/stylesheets/html1_resources.xsl
	* data/stylesheets/msp2planner.xsl
	* data/stylesheets/html1_gantt.xsl
	* data/stylesheets/planner2html.xsl

2007-07-02  Kurt Maute	<kurt@maute.us>
	The following update provided by Maurice van der Pot <griffon26@kfk4ever.com>
	* configure.in:  escape newlines in ALL_LINGUAS
	* data/stylesheets/html1_css_ie.xsl
	* data/stylesheets/html1_css.xsl
	* data/stylesheets/html1_gantt.xsl
	* data/stylesheets/Makefile.am
	* data/stylesheets/planner2html.xsl - fix layout of gantt chart in
	HTML export (headers not aligned with gantt bars) per bug #393620

2007-06-11  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

        * configure.in: Added 'zh_HK' to ALL_LINGUAS.

2007-04-12  Gintautas Miliauskas  <gintas@akl.lt>

	* configure.in: Added 'lt' to ALL_LINGUAS.

2007-03-13  Kurt Maute	<kurt@maute.us>
	* planner-gantt-chart.c
	* planner-gantt-chart.h
	* planner-gantt-view.c:
	Store 'Show Guide Lines' setting in gconf - contributed by Marie
	Durand <marie.durand@teamlog.com>

2007-02-05  Matic Zgur <mr.zgur@gmail.com>

	* configure.in: Added 'sl' to ALL_LINGUAS.

2007-01-03 Jordi Mas i Hernàndez <jordimash@gmail.com>

	* planner-gantt-view.c: adds mouse wheel support to
	to the gannt view.